--- a/feature-engineering/README.html
+++ b/feature-engineering/README.html
@@ -10,6 +10,7 @@
 
 <body class="stackedit">
 </body>
-
+  <h2 id="vsintro"></h2>
+  <p>Featurization is a way to change some form of data (text data, graph data, time-series data,…)into a numerical vector.<p>
 </html>
 
