--- a/feature-engineering/README.html
+++ b/feature-engineering/README.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Featurization</title>
+  <title>Play with Features</title>
   <link rel="stylesheet" href="https://stackedit.io/style.css" />
 </head>
 
 <body class="stackedit">
-</body>
-  <h2 id="vsintro"></h2>
+  <h2 id="vsintro">Featurization vs Feature Engineering</h2>
   <p>Featurization is a way to change some form of data (text data, graph data, time-series data,…)into a numerical vector.<p>
+</body>
 </html>
 
