--- a/feature-engineering/README.html
+++ b/feature-engineering/README.html
@@ -9,8 +9,10 @@
 </head>
 
 <body class="stackedit">
+  <div class="stackedit__html">
   <h2 id="vsintro">Featurization vs Feature Engineering</h2>
   <p>Featurization is a way to change some form of data (text data, graph data, time-series data,…)into a numerical vector.<p>
+  </div>
 </body>
 </html>
 
