--- a/feature-engineering/README.html
+++ b/feature-engineering/README.html
@@ -11,7 +11,12 @@
 <body class="stackedit">
   <div class="stackedit__html">
   <h2 id="vsintro">Featurization vs Feature Engineering</h2>
-  <p>Featurization is a way to change some form of data (text data, graph data, time-series data,…)into a numerical vector.<p>
+  <p>Featurization is a way to change some form of data (text data, graph data, time-series data,…) into a numerical vector.<p>
+  <p>
+    Featurization is different from feature engineering. Feature engineering is just transforming the numerical features somehow so that the machine learning 
+    models  work well. In feature engineering, features are already in the numerical form. whereas in featurization data not need to be in the form of numerical 
+    vector.
+  </p>
   </div>
 </body>
 </html>
