--- a/feature-engineering/README.html
+++ b/feature-engineering/README.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Play with Features</title>
+  <title>featurization</title>
   <link rel="stylesheet" href="https://stackedit.io/style.css" />
 </head>
 
@@ -14,9 +14,15 @@
   <p>Featurization is a way to change some form of data (text data, graph data, time-series data,…) into a numerical vector.<p>
   <p>
     Featurization is different from feature engineering. Feature engineering is just transforming the numerical features somehow so that the machine learning 
-    models  work well. In feature engineering, features are already in the numerical form. whereas in featurization data not need to be in the form of numerical 
+    models  work well. In feature engineering, features are already in the numerical form; whereas in featurization data is not need to be in the form of numerical 
     vector.
   </p>
+    <h2>Why Featurization?</h2>
+    <p>
+      The machine learning model cannot work with row text data directly. In the end, machine learning models work with numerical (categorical, real,…) features. 
+      So it is import to change some type of data into numerical vector so that we can <b>leverage the whole power of linear algebra</b> (making the decision 
+      boundary between data points)and statistics tools with other types of data also.
+    </p>
   </div>
 </body>
 </html>
