--- a/feature-engineering/README.html
+++ b/feature-engineering/README.html
@@ -14,14 +14,14 @@
   <p>Featurization is a way to change some form of data (text data, graph data, time-series data,…) into a numerical vector.<p>
   <p>
     Featurization is different from feature engineering. Feature engineering is just transforming the numerical features somehow so that the machine learning 
-    models  work well. In feature engineering, features are already in the numerical form; whereas in featurization data is not need to be in the form of numerical 
-    vector.
+    models  work well. In feature engineering, features are already in the numerical form; whereas in featurization data is not need to be in the form of
+    numerical vector.
   </p>
     <h2>Why Featurization?</h2>
     <p>
-      The machine learning model cannot work with row text data directly. In the end, machine learning models work with numerical (categorical, real,…) features. 
-      So it is import to change some type of data into numerical vector so that we can <b>leverage the whole power of linear algebra</b> (making the decision 
-      boundary between data points)and statistics tools with other types of data also.
+      The machine learning model cannot work with row text data directly. In the end, machine learning models work with numerical (categorical, real,…) 
+      features. So it is import to change some type of data into numerical vector so that we can <b>leverage the whole power of linear algebra</b> (making the
+      decision boundary between data points)and statistics tools with other types of data also.
     </p>
   </div>
 </body>
