--- a/feature-engineering/README.html
+++ b/feature-engineering/README.html
@@ -23,6 +23,8 @@
       features. So it is import to change some type of data into numerical vector so that we can <b>leverage the whole power of linear algebra</b> (making the
       decision boundary between data points)and statistics tools with other types of data also.
     </p>
+     <b>leverage the whole power of linear algebra</b>  <br>
+     <strong>leverage the whole power of linear algebra</strong> 
   </div>
 </body>
 </html>
