--- a/feature-engineering/README.html
+++ b/feature-engineering/README.html
@@ -21,7 +21,7 @@
     <h2>Why Featurization?</h2>
     <p>
       At the end of the day, all our machine learning algorithm can work only with numerical (categorical, real,…) features. So it is import to change some 
-      type of data into numerical vector so that we can <b>leverage the whole power of linear algebra</b> (making thedecision boundary between data points)
+      type of data into numerical vector so that we can <b>leverage the whole power of linear algebra</b> (making the decision boundary between data points)
       <b>and statistics tools</b> with other types of data also.
     </p>
     Out of the various featurization techniques available for the text data, the most commonly used techniques are :
@@ -33,9 +33,9 @@
     </ul>
    For the categorical features, the most commonly used featurization techniques are the mean response time and one-hot encoding.
    <p>
-      Feature Engineering is the process of using domain knowledge to extract the new variables from the raw data, which makes the machine learning 
-      algorithms work better. Feature Engineering is a difficult task as it is domain-specific. Feature Selection is to select some useful, relevant 
-      features among the features we generate/find/have in our data.
+      Feature Engineering is the process of using domain knowledge to <b>extract the new variables from the raw data</b>, which makes the machine learning 
+      algorithms work better. Feature Engineering is a difficult task as it is domain-specific. Feature Selection is to <b>select some useful, relevant 
+      features among the features</b> we generate/find/have in our data.
    </p>
   </div>
 </body>
