--- a/feature-engineering/README.html
+++ b/feature-engineering/README.html
@@ -37,6 +37,11 @@
       algorithms work better. Feature Engineering is a difficult task as it is domain-specific. Feature Selection is to <b>select some useful, relevant 
       features among the features</b> we generate/find/have in our data.
    </p>
+   <p>
+     <b>Note :- </b>If we are using a linear model like Logistic Regression or Linear SVM, then we perform feature engineering to convert the non-linearly 
+     separable data into a linearly separable format, to make our models work better. In a nutshell, we are trying to transform our features to better
+     suit our models and hence design better overall models.
+  </p>
   </div>
 </body>
 </html>
