--- a/feature-engineering/README.html
+++ b/feature-engineering/README.html
@@ -4,14 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>featurization</title>
+  <title>Introduction</title>
   <link rel="stylesheet" href="https://stackedit.io/style.css" />
 </head>
 
 <body class="stackedit">
   <div class="stackedit__html">
+  <br><br><br><br><br>
   <p>Featurization and Feature Engineering is the most important aspect of ML.<p>
-  <h2 id="vsintro">Featurization vs Feature Engineering</h2>
+  <h2 id="vsintro">Featurization and Feature Engineering</h2>
   <p>Featurization is a way to change some form of data (text data, graph data, time-series data,…) into a numerical vector.<p>
   <p>
     Featurization is different from feature engineering. Feature engineering is about transforming the numerical features somehow so that they make machine
