--- a/feature-engineering/README.html
+++ b/feature-engineering/README.html
@@ -11,6 +11,16 @@
 <body class="stackedit">
   <div class="stackedit__html">
   <br><br><br><br><br>
+  <h2 id="intro">Introduction</h2>
+  <p>
+     What is a feature and why we need the engineering of it? Basically, all machine learning algorithms use some input data to create outputs. This input 
+     data comprise features, which are usually in the form of structured columns. Algorithms require features with some specific characteristic to work 
+    properly. Here, the need for feature engineering arises. I think feature engineering efforts mainly have two goals:
+  </p>
+  <ul>
+    <li>Preparing the proper input dataset, compatible with the machine learning algorithm requirements.</li>
+    <li>Improving the performance of machine learning models.</li>
+  </ul>
   <p>Featurization and Feature Engineering is the most important aspect of ML.<p>
   <h2 id="vsintro">Featurization and Feature Engineering</h2>
   <p>Featurization is a way to change some form of data (text data, graph data, time-series data,…) into a numerical vector.<p>
