--- a/feature-engineering/README.html
+++ b/feature-engineering/README.html
@@ -13,9 +13,9 @@
   <br><br><br><br><br>
   <h2 id="intro">Introduction</h2>
   <p>
-     What is a feature and why we need the engineering of it? Basically, all machine learning algorithms use some input data to create outputs. This input 
-     data comprise features, which are usually in the form of structured columns. Algorithms require features with some specific characteristic to work 
-    properly. Here, the need for feature engineering arises. I think feature engineering efforts mainly have two goals:
+     What is a feature ? Basically, all machine learning algorithms use some input data to create outputs. This input data comprise features, which 
+     are usually in the form of structured columns. Algorithms require features with some specific characteristic to work properly. Here, the need 
+     arises with two main goals:
   </p>
   <ul>
     <li>Preparing the proper input dataset, compatible with the machine learning algorithm requirements.</li>
