--- a/feature-engineering/README.html
+++ b/feature-engineering/README.html
@@ -21,20 +21,23 @@
     <li>Preparing the proper input dataset, compatible with the machine learning algorithm requirements.</li>
     <li>Improving the performance of machine learning models.</li>
   </ul>
-  <p>Featurization and Feature Engineering is the most important aspect of ML.<p>
-  <h2 id="vsintro">Featurization and Feature Engineering</h2>
-  <p>Featurization is a way to change some form of data (text data, graph data, time-series data,…) into a numerical vector.<p>
+  <h3>How to achieve them ?</h3>
+  <p>
+      At the end of the day, all our machine learning algorithms can work only with numerical (categorical, real,…) features. So it is import to change other 
+      types of data into numerical vectors so that we can <b>leverage the whole power of linear algebra</b> (making the decision boundary between data points)
+      <b>and statistics tools</b> with other types of data also.
+  </p>
+  <blockquote>
+  <p>Featurization is a way to change some form of data (text data, graph data, time-series data,…) into a numerical vector.</p>
+  </blockquote>
+  <p>Featurization and Feature Engineering is the most important aspect of ML.</p>
   <p>
     Featurization is different from feature engineering. Feature engineering is about transforming the numerical features somehow so that they make machine
     learning models perform well at prediction. In feature engineering, features are already in the numerical form; whereas in featurization data is not need
     to be in the form of numerical vector.
   </p>
     <h2>Why Featurization?</h2>
-    <p>
-      At the end of the day, all our machine learning algorithm can work only with numerical (categorical, real,…) features. So it is import to change some 
-      type of data into numerical vector so that we can <b>leverage the whole power of linear algebra</b> (making the decision boundary between data points)
-      <b>and statistics tools</b> with other types of data also.
-    </p>
+    
     Out of the various featurization techniques available for the text data, the most commonly used techniques are :
     <ul>
         <li>Bag of Words (BOW)</li>
