--- a/feature-engineering/README.html
+++ b/feature-engineering/README.html
@@ -30,8 +30,8 @@
   </p>
   <blockquote>
   <p>Featurization is a way to change some form of data (text data, graph data, time-series data,…) into a numerical vector.</p>
-  So, with featurization we can make our input data compatible with the algorithm requirements
   </blockquote>
+  So, with featurization we can make our input data compatible with the algorithm requirements.
   Out of the various featurization techniques available for the text data, the most commonly used techniques:
     <ul>
         <li>Bag of Words (BOW)</li>
