--- a/feature-engineering/README.html
+++ b/feature-engineering/README.html
@@ -41,25 +41,23 @@
     </ul>
    For the categorical features, the most commonly used featurization techniques are the mean response time and one-hot encoding.
   <h3>Feature Engineering</h3>
-  <p>Featurization and Feature Engineering is the most important aspect of ML.</p>
   <p>
-    Featurization is different from feature engineering. Feature engineering is about transforming the numerical features somehow so that they make machine
-    learning models perform well at prediction. In feature engineering, features are already in the numerical form; whereas in featurization data is not need
-    to be in the form of numerical vector.
+    Feature Engineering is the process of using domain knowledge to <b>extract the new variables from the raw data</b>, which makes the machine learning 
+    algorithms work better. Feature Engineering is a difficult task as it is domain-specific. Feature Selection is to <b>select some useful, relevant 
+    features among the features</b> we generate/find/have in our data.
   </p>
-    <h2>Why Featurization?</h2>
-    
-    
-   <p>
-      Feature Engineering is the process of using domain knowledge to <b>extract the new variables from the raw data</b>, which makes the machine learning 
-      algorithms work better. Feature Engineering is a difficult task as it is domain-specific. Feature Selection is to <b>select some useful, relevant 
-      features among the features</b> we generate/find/have in our data.
-   </p>
-   <blockquote>
-   <p>
-     <b>Note :- </b>If we are using a linear model like Logistic Regression or Linear SVM, then we perform feature engineering to convert the non-linearly 
+  <blockquote>
+     Feature engineering is about transforming the numerical features somehow so that they make machine learning models perform well at prediction.
+  </blockquote>
+  <p>
+     <b><i>Note :- </i></b>If we are using a linear model like Logistic Regression or Linear SVM, then we perform feature engineering to convert the non-linearly 
      separable data into a linearly separable format, to make our models work better. In a nutshell, we are trying to transform our features to better
      suit our models and hence design better overall models.
+  </p>
+  <blockquote>
+  <p>
+    Featurization is different from feature engineering. In feature engineering, features are already in the numerical form; whereas in featurization data is not need
+    to be in the form of numerical vector. Featurization and Feature Engineering is the most important aspect of ML.
   </p>
   </blockquote>
   </div>
