--- a/feature-engineering/README.html
+++ b/feature-engineering/README.html
@@ -49,6 +49,7 @@
   <blockquote>
      Feature engineering is about transforming the numerical features somehow so that they make machine learning models perform well at prediction.
   </blockquote>
+  So, with feature engineering we can improve the performance of machine learning models.
   <p>
      <b><i>Note :- </i></b>If we are using a linear model like Logistic Regression or Linear SVM, then we perform feature engineering to convert the non-linearly 
      separable data into a linearly separable format, to make our models work better. In a nutshell, we are trying to transform our features to better
@@ -56,7 +57,7 @@
   </p>
   <blockquote>
   <p>
-    Featurization is different from feature engineering. In feature engineering, features are already in the numerical form; whereas in featurization data is not need
+    <b>Difference :- </b>Featurization is different from feature engineering. In feature engineering, features are already in the numerical form; whereas in featurization data is not need
     to be in the form of numerical vector. Featurization and Feature Engineering is the most important aspect of ML.
   </p>
   </blockquote>
