--- a/feature-engineering/README.html
+++ b/feature-engineering/README.html
@@ -55,12 +55,11 @@
      separable data into a linearly separable format, to make our models work better. In a nutshell, we are trying to transform our features to better
      suit our models and hence design better overall models.
   </p>
-  <blockquote>
+  <h3>Difference</h3>
   <p>
-    <b>Difference :- </b>Featurization is different from feature engineering. In feature engineering, features are already in the numerical form; whereas in featurization data is not need
+    Featurization is different from feature engineering. In feature engineering, features are already in the numerical form; whereas in featurization data is not need
     to be in the form of numerical vector. Featurization and Feature Engineering is the most important aspect of ML.
   </p>
-  </blockquote>
   </div>
 </body>
 </html>
