--- a/feature-engineering/README.html
+++ b/feature-engineering/README.html
@@ -57,9 +57,15 @@
   </p>
   <h3>Difference</h3>
   <p>
-    Featurization is different from feature engineering. In feature engineering, features are already in the numerical form; whereas in featurization data is not need
-    to be in the form of numerical vector. Featurization and Feature Engineering is the most important aspect of ML.
+    Featurization is different from feature engineering. In feature engineering, features are already in the numerical form; whereas in featurization data 
+    need not be in the form of numerical vector.
   </p>
+  <blockquote>
+    <p><b><i>
+    The features you use influence more than everything else the result. No algorithm alone, to my knowledge, can supplement the information gain given
+    by correct feature engineering. Featurization and Feature Engineering is the most important aspect of ML.
+    </i></b></p>
+  </blockquote>
   </div>
 </body>
 </html>
