--- a/feature-engineering/README.html
+++ b/feature-engineering/README.html
@@ -24,9 +24,9 @@
   <h2>How to achieve them ?</h2>
   <h3>Featurization</h3>
   <p>
-      At the end of the day, all our machine learning algorithms can work only with numerical (categorical, real,…) features. So it is import to change other 
-      types of data into numerical vectors so that we can <b>leverage the whole power of linear algebra</b> (making the decision boundary between data points)
-      <b>and statistics tools</b> with other types of data also.
+      At the end of the day, all our machine learning algorithms can work only with numerical (categorical, real,…) features. So it is import to change
+      other types of data into numerical vectors so that we can <b>leverage the whole power of linear algebra</b> (making the decision boundary between
+       data points) <b>and statistics tools</b> with other types of data also.
   </p>
   <blockquote>
   <p>Featurization is a way to change some form of data (text data, graph data, time-series data,…) into a numerical vector.</p>
@@ -51,19 +51,19 @@
   </blockquote>
   So, with feature engineering we can improve the performance of machine learning models.
   <p>
-     <b><i>Note :- </i></b>If we are using a linear model like Logistic Regression or Linear SVM, then we perform feature engineering to convert the non-linearly 
-     separable data into a linearly separable format, to make our models work better. In a nutshell, we are trying to transform our features to better
-     suit our models and hence design better overall models.
+     <b><i>Note :- </i></b>If we are using a linear model like Logistic Regression or Linear SVM, then we perform feature engineering to convert the
+      non-linearly separable data into a linearly separable format, to make our models work better. In a nutshell, we are trying to transform our 
+      features to better suit our models and hence design better overall models.
   </p>
   <h3>Difference</h3>
   <p>
     Featurization is different from feature engineering. In feature engineering, features are already in the numerical form; whereas in featurization data 
     need not be in the form of numerical vector.
-  </p>
+  </p><br><br><br><br>
   <blockquote>
     <p><b><i>
-    The features you use influence more than everything else the result. No algorithm alone, to my knowledge, can supplement the information gain given
-    by correct feature engineering. Featurization and Feature Engineering is the most important aspect of ML.
+    "The features you use influence more than everything else the result. No algorithm alone, to my knowledge, can supplement the information gain given
+    by correct feature engineering. Featurization and Feature Engineering is the most important aspect of ML."
     </i></b></p>
   </blockquote>
   </div>
