--- a/feature-engineering/README.html
+++ b/feature-engineering/README.html
@@ -12,6 +12,14 @@
   <div class="stackedit__html">
   <h3 align="center"><i>--- FEATURE ENGINEERING IS AN ART ---</i></h3>
   <br><br>
+  Steps which are involved while solving any problem in machine learning are as follows:
+  <ul>
+    <li>Gathering data</li>
+    <li>Cleaning data</li>
+    <li><b>Feature engineering</b></li>
+    <li>Defining model</li>
+    <li>Training, testing model and predicting the output</li>
+  </ul>
   <h1 id="intro">Introduction</h1>
   <p>
      What is a feature ? Basically, all machine learning algorithms use some input data to create outputs. This input data comprise features, which 
